Shafdan titles update

--- a/Thesis - Water Consumption Prediction/Shafdan.ipynb
+++ b/Thesis - Water Consumption Prediction/Shafdan.ipynb
@@ -134,7 +134,8 @@
    "id": "87883830",
    "metadata": {},
    "source": [
-    "### Plot 1"
+    "### Plot 1 : \n",
+    "#### Map of the Shafdan Consumer Sample (Kibbutzim and Moshavim)"
    ]
   },
   {
@@ -230,7 +231,8 @@
    "id": "f5b732fd",
    "metadata": {},
    "source": [
-    "### Plot 2"
+    "### Plot 2 : \n",
+    "#### Goodness of Fit - Predictive Model"
    ]
   },
   {
@@ -475,7 +477,8 @@
    "id": "ce9b2fa6",
    "metadata": {},
    "source": [
-    "### Plot 3"
+    "### Plot 3 : \n",
+    "#### Aggregate Demand for Shafdan Under Fresh Irrigation Water Pricing Scheme Scenarios"
    ]
   },
   {
