--- a/SQL Progress/SQL training.ipynb
+++ b/SQL Progress/SQL training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
     "import mysql.connector\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "nba_df = pd.read_csv(r\"C:\\Users\\saarp\\Desktop\\sql\\database_24_25.csv\")\n",
-    "veterans = pd.read_csv(r\"C:\\Users\\saarp\\Desktop\\sql\\all_seasons.csv\")\n",
+    "nba_df = pd.read_csv(r\"database_24_25.csv\")\n",
+    "veterans = pd.read_csv(r\"all_seasons.csv\")\n",
     "\n",
     "conn = mysql.connector.connect(\n",
     "    host=\"localhost\", \n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "-1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "-1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
